--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             const initDataUnsafe = Telegram.WebApp.initDataUnsafe;
 
             // Mostra os dados do WebApp na interface
+            
             document.getElementById('userData').innerHTML = `
                 <p><strong>ID do Usuário:</strong> ${initDataUnsafe.user.id}</p>
                 <p><strong>Nome do Usuário:</strong> ${initDataUnsafe.user.first_name} ${initDataUnsafe.user.last_name || ''}</p>
                 <p><strong>Nome de Usuário:</strong> ${initDataUnsafe.user.username || 'N/A'}</p>
-                <p><strong>ID do Chat:</strong> ${initDataUnsafe.chat?.id || 'N/A'}</p>
+                <p><strong>ID do Chat:</strong> ${initDataUnsafe.chat.id || 'N/A'}</p>
+                <p><strong>Param:</strong> ${initDataUnsafe.tgWebAppStartParam || 'N/A'}</p>
                 <p><strong>Token:</strong> ${initData}</p>
             `;
         }
