--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p><strong>Nome do Usuário:</strong> ${initDataUnsafe.user.first_name} ${initDataUnsafe.user.last_name || ''}</p>
                 <p><strong>Nome de Usuário:</strong> ${initDataUnsafe.user.username || 'N/A'}</p>
                 <p><strong>ID do Chat:</strong> ${initDataUnsafe.chat.id || 'N/A'}</p>
-                <p><strong>Param:</strong> ${initDataUnsafe.tgWebAppStartParam || 'N/A'}</p>
+                <p><strong>Param:</strong> ${initDataUnsafe.start_param || 'N/A'}</p>
                 <p><strong>Token:</strong> ${initData}</p>
             `;
         }
