--- a/index.html
+++ b/index.html
@@ -24,21 +24,16 @@
                 <p><strong>Nome do Usuário:</strong> ${initDataUnsafe.user.first_name} ${initDataUnsafe.user.last_name || ''}</p>
                 <p><strong>Nome de Usuário:</strong> ${initDataUnsafe.user.username || 'N/A'}</p>
                 <p><strong>ID do Chat:</strong> ${initDataUnsafe.chat?.id || 'N/A'}</p>
-                <p><strong>Param:</strong> ${initDataUnsafe || 'N/A'}</p>
-                <p><strong>Token:</strong> ${initData}</p>
+                <p><strong>Token:</strong> ${JSON.stringify(initData)}</p>
             `;
 
             const userDataDiv = document.getElementById('initDataUnsafe_id');
 
             // Percorre as chaves e valores de initDataUnsafe
             Object.entries(initDataUnsafe).forEach(([key, value]) => {
-                // Cria um novo parágrafo para cada chave/valor
                 const p = document.createElement('p');
-                // Se o valor for um objeto, converte para string JSON
                 const displayValue = (typeof value === 'object') ? JSON.stringify(value) : value;
-                // Define o texto do parágrafo
                 p.textContent = `${key}: ${displayValue}`;
-                // Insere o parágrafo dentro do div
                 userDataDiv.appendChild(p);
             });
 
