--- a/index.html
+++ b/index.html
@@ -20,11 +20,26 @@
             const initData = Telegram.WebApp.initData;
             const initDataUnsafe = Telegram.WebApp.initDataUnsafe;
 
+            function decodeBase64(base64String) {
+                // Decodifica a string Base64 para texto usando atob()
+                const decodedString = atob(base64String);
+                return decodedString;
+            }
+
             // Mostra os dados do WebApp na interface
             
-            document.getElementById('userData').innerText = `
-                <p><strong>initData:</strong> ${JSON.stringify(initData)}</p>
-                <p><strong>initDataUnsafe:</strong> ${JSON.stringify(initDataUnsafe)}</p>
+            // document.getElementById('userData').innerText = `
+            //     <p><strong>initData:</strong> ${JSON.stringify(initData)}</p>
+            //     <p><strong>initDataUnsafe:</strong> ${JSON.stringify(initDataUnsafe)}</p>
+            // `;
+
+            document.getElementById('userData').innerHTML = `
+                <p><strong>ID do Usuário:</strong> ${initDataUnsafe.user.id}</p>
+                <p><strong>Nome do Usuário:</strong> ${initDataUnsafe.user.first_name} ${initDataUnsafe.user.last_name || ''}</p>
+                <p><strong>Nome de Usuário:</strong> ${initDataUnsafe.user.username || 'N/A'}</p>
+                <p><strong>ID do Chat:</strong> ${initDataUnsafe.chat?.id || 'N/A'}</p>
+                <p><strong>start_param:</strong> ${initDataUnsafe?.start_param ? atob(initDataUnsafe.start_param) : 'N/A'}
+                <p><strong>Token:</strong> ${initData}</p>
             `;
 
             const userDataDiv = document.getElementById('initDataUnsafe_id');
