--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
             //     <p><strong>initDataUnsafe:</strong> ${JSON.stringify(initDataUnsafe)}</p>
             // `;
 
+            const urlParams = new URLSearchParams(window.location.search);
+            const receivedData = urlParams.get('data') || 'N/A';
+
             document.getElementById('userData').innerHTML = `
                 <p><strong>ID do Usuário:</strong> ${initDataUnsafe.user.id}</p>
                 <p><strong>Nome do Usuário:</strong> ${initDataUnsafe.user.first_name} ${initDataUnsafe.user.last_name || ''}</p>
                 <p><strong>Nome de Usuário:</strong> ${initDataUnsafe.user.username || 'N/A'}</p>
                 <p><strong>ID do Chat:</strong> ${initDataUnsafe.chat?.id || 'N/A'}</p>
                 <p><strong>start_param:</strong> ${initDataUnsafe?.start_param ? atob(initDataUnsafe.start_param) : 'N/A'}
+                <p><strong>urlParam:</strong> ${receivedData}</p>
                 <p><strong>Token:</strong> ${initData}</p>
             `;
 
